--- a/윤서보경팀/3차과제/윤서/project/style.css
+++ b/윤서보경팀/3차과제/윤서/project/style.css
@@ -1,8 +1,28 @@
 body{
     margin: 0;
+    width: 1980px;
 }
 
 .top-bar{
+    height: 100px;
+}
+
+.logo{
 
 }
 
+.top-menu{
+
+}
+
+.login-btn{
+
+}
+
+.main-background{
+
+}
+
+.main-text-image-1{
+    
+}
