--- a/윤서보경팀/3차과제/윤서/project/style.css
+++ b/윤서보경팀/3차과제/윤서/project/style.css
@@ -24,5 +24,33 @@ body{
 }
 
 .main-text-image-1{
-    
+
+}
+
+.main-text-image-2{
+
+}
+
+.background-image{
+
+}
+
+.main-text{
+
+}
+
+.main-bottom-btn{
+
+}
+
+.main-bottom-btn a{
+
+}
+
+.main-bottom-btn img{
+
+}
+
+.section-about{
+
 }
