--- a/윤서보경팀/3차과제/윤서/project/style2.css
+++ b/윤서보경팀/3차과제/윤서/project/style2.css
@@ -98,7 +98,7 @@ nav a {
     top: 316px;
 }
 
-.main-text {
+.main-text p{
     text-align: center;
     bottom: 264px;
     left: 50%;
@@ -108,7 +108,8 @@ nav a {
 }
 
 .main-bottom-btn img {
-    margin-top: 20px;
+    margin-top: 556px;
+    padding: 20px 612px;
     height: 84px;
     width: 760px;
     margin-left: 430px;
@@ -158,10 +159,19 @@ nav a {
     height: auto;
 }
 
-#benefit-text1, #benefit-text2, #benefit-text3 {
-    font-size: 18px;
-    line-height: 1.6;
-    text-align: left;
+.benefit-text h3{
+    font-size: 60px;
+    font-weight: 700;
+    color: #eeeeee;
+    font-family: 'Family', 'Heading';
+}
+
+.benefit-text p{
+    font-family: suit;
+    font-size: 32px;
+    color: #eeeeee;
+    font-weight: 600;
+    line-height: 48px;
 }
 
 #partner-section {
@@ -175,13 +185,22 @@ nav a {
 }
 
 #partner-text1 h1 {
-    font-size: 28px;
+    font-size: 80px;
     color: #E32929;
+    font-weight: 600;
+    font-family: 'Playfair Display';
+    line-height: 110px;
+    font-style: italic;
+    padding-left: 352px;
 }
 
-#partner-text2 {
-    font-size: 18px;
-    line-height: 1.8;
+#partner-text2 p{
+    font-family: 'Noto Sans KR';
+    font-size: 32px;
+    color: #eeeeee;
+    font-weight: 600;
+    line-height: 48px;
+    padding-left: 352px;
 }
 
 #experience-section {
