필요없는 파일 삭제

--- a/윤서보경팀/3차과제/윤서/project/test.css
+++ b/윤서보경팀/3차과제/윤서/project/test.css
@@ -16,9 +16,6 @@
     position: relative;
     z-index: 2;
 }
-.header-top:hover{
-    
-}
 .pagelogo {
     display: flex;
     margin: 0.5rem 2rem;
@@ -631,4 +628,8 @@ svg {
 .blank2 {
     height: 500px;
     background-color: rgb(21, 21, 21);
+}
+.blank5{
+    height: 200px;
+    background-color: rgb(21, 21, 21);;
 }
