loginPage html 구성 및 css 추가

--- a/윤서보경팀/3차과제/윤서/project/test.css
+++ b/윤서보경팀/3차과제/윤서/project/test.css
@@ -547,7 +547,7 @@ button:disabled {
 }
 
 .footer-title {
-    font-family: Alike, serif;
+    font-family: 'Alike', serif;
     font-size: 4rem;
     color: white;
 }
